refactor: Refactored code of FinalizeOrderEndpoint.java